# agentplane

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  manage.py  mise.toml  prek.toml  process-compose.yaml  pyproject.toml
.github/workflows/: test.yml
agentplane/: asgi.py  settings.py  urls.py  wsgi.py
agents/: admin.py  api.py  apps.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
agents/migrations/: 0001_initial.py  0002_rename_system_prompt_agent_instructions.py  0003_conversation.py  0004_rename_events_conversation_history.py  0005_llmprovider.py  0006_agent_llm_provider_agent_model_name.py  0007_llmprovider_help_text.py  0008_agent_allowed_collections_agent_search_enabled.py
agents/tests/: test_agent_chat_flow.py  test_chat_api.py  test_services.py
config/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/: architecture.md  code_defined_agents.md  decisions.md  migration-roadmap.md  migration_plan.md  milestone_2_implementation_plan.md  post_migration_roadmap.md  prompt_based_agents.md  user_stories.md  vision.md
documents/: admin.py  api.py  apps.py  models.py  services.py  signals.py  tasks.py  tests.py  urls.py
documents/migrations/: 0001_initial.py  (+2 more)
mise-tasks/: init
mops/: __init__.py  admin.py  agents.py  api.py  apps.py  decorators.py  embeddings.py  endpoints.py  models.py  registry.py  resolver.py  services.py  signals.py  tools.py  urls.py  vector_store.py  views.py
scripts/: dev.sh  download_llama_runtime.sh  download_local_llm.sh  run-dev-postgres.sh  run-local-llm.sh
(+35 files in other folders)
