[project]
name = "agentplane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-ninja>=1.6.2",
    "pgvector>=0.3.0",
    "django-tasks-db>=0.12.0",
    "openai>=2.30.0",
    "pypdf>=4.0.0",
    "psycopg[binary]>=3.2",
    "pydantic-ai>=0.8.1",
    "sentence-transformers>=3.0.0",
]
